# parser-hw1

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  config.ini  pyproject.toml
src/: calculate.py  log_analyzer.py  settings.py  types.py  utils.py
tests/: conftest.py  test_runner.py
tests/calculate/: test_calc_count.py  test_calc_count_perc.py  test_calc_time_avg.py  test_calc_time_max.py  test_calc_time_med.py  test_calc_time_perc.py  test_calc_time_sum.py
tests/data/: nginx-access-ui.log-20170630
tests/utils/: test_open_file.py  test_parse_logs.py  test_search_file.py
